infra/gatekeeper-policies/required-app-labels/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: deployments-must-have-app-labels
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    namespaces:
      - applications
  parameters:
    message: "Deployments in `applications` must carry all of: owner, env, app.kubernetes.io/name, cost-center."
    labels:
      - key: owner
      - key: env
      - key: app.kubernetes.io/name
      - key: cost-center
